--- a/trunk/latex/paper.tex
+++ b/trunk/latex/paper.tex
@@ -52,8 +52,9 @@ Hongyi Xin & Donghyuk Lee    \\
 \input{./section/3_algorithm.tex}
 \input{./section/4_gpu.tex}
 \input{./section/5_methodology.tex}
-\input{./section/6_evaluation}
-\input{./section/7_analysis}
+\input{./section/6_evaluation.tex}
+\input{./section/7_analysis.tex}
+\input{./section/8_conclusion.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % bibliography
