--- a/trunk/latex/ref.bib
+++ b/trunk/latex/ref.bib
@@ -1,54 +1,54 @@
-@TECHREPORT{Burrows94ablock-sorting,
+@ARTICLE{Burrows94ablock-sorting,
     author = {M. Burrows and D. J. Wheeler and M. Burrows and D. J. Wheeler},
     title = {A block-sorting lossless data compression algorithm},
     institution = {},
     year = {1994}
 }
  
-@TECHREPORT{genome_sequence_0, 
+@ARTICLE{genome_sequence_0, 
 	author = {Jay Shendure and Hanlee Ji},
 	title = {Next-generation DNA sequencing},
 	institution = {Nature Biotechnology},
 	year = {2008} 
 }
 
-@TECHREPORT{genome_sequence_1,
-    author = {Wang, J. et al.},
+@ARTICLE{genome_sequence_1,
+    author = {Wang, J. and et al.},
     title = {The diploid genome sequence of an Asian individual},
     institution = {Nature},
     year = {2008}
 }
 
-@TECHREPORT{genome_sequence_2, 
-	author = {Campbell, P.J. et al.}, 
+@ARTICLE{genome_sequence_2, 
+	author = {Campbell, P.J. and et al.}, 
 	title = {Identification of somatically acquired rearrangements in cancer using
 			genome-wide massively parallel paired-end sequencing}, 
 	institution = {Nat. Genet.},
 	year = {2008} 
 }
 
-@TECHREPORT{genome_sequence_3, 
-	author = {Wheeler, D.A. et al.}, 
+@ARTICLE{genome_sequence_3, 
+	author = {Wheeler, D.A. and et al.}, 
 	title = {The complete genome of an individual by massively parallel DNA sequencing},
 	institution = {Nature},
 	year = {2008} 
 }
 
-@TECHREPORT{genome_sequence_4, 
-	author = {Chiang, D.Y. et al.}, 
+@ARTICLE{genome_sequence_4, 
+	author = {Chiang, D.Y. and et al.}, 
 	title = {High-resolution mapping of copy-number alterations with massively parallel sequencing},
 	institution = {Nature Methods},
 	year = {2009} 
 }
 
-@TECHREPORT{roche454, 
-	author = {Marcel Margulies, Michael Egholm, William E. Altman1, Said Attiya1, Joel S. Bader et al.},
+@ARTICLE{roche454, 
+	author = {Marcel Margulies and et al.},
 	title = {Genome sequencing in microfabricated high-density picolitre reactors},
 	institution = {Nature},
 	year = {2005} 
 }
 
-@TECHREPORT{illumina, 
+@ARTICLE{illumina, 
 	author = {David R Bentle},
 	title = {Whole-genome re-sequencing},
 	institution = {Current Opinion in Genetics \& Development},
@@ -62,15 +62,15 @@
 }
 
 
-@TECHREPORT{tools, 
-	author = {Ruffalo et al.},
+@ARTICLE{tools, 
+	author = {Ruffalo and and et al.},
 	title = {Comparative analysis of algorithms for next-generation sequencing read alignment},
 	institution = {Bioinformatics},
 	year = {2011} 
 }
 
-@TECHREPORT{mrFast,
-	author = {Alkan et al.},
+@ARTICLE{mrFast,
+	author = {Can Alkan and et al.},
 	title = {mrsFAST: a cache-oblivious algorithm for short-read mapping},
 	institution = {Natura Methods},
 	year = {2010}
@@ -93,15 +93,38 @@
 }
 
 @ARTICLE{soap2,
-    author = {Li et al.},
+    author = {Li and et al.},
     title = {SOAP2: an improved ultrafast tool for short read alignment},
     journal = {Bioinformatics},
     year = {2009},
 }
 
 @ARTICLE{shrimp,
-    author = {Rumble et al.},
+    author = {Rumble and et al.},
     title = {SHRiMP: Accurate Mapping of Short Color-space Reads},
     journal = {PLoS},
     year = {2009},
+}
+
+@ARTICLE{saruman,
+    author = {Blom J, Jakobi T and et al.},
+    title = {Exact and complete short-read alignment 
+			to microbial genomes using Graphics Processing Unit programming},
+    journal = {Bioinformatics},
+    year = {2011},
+}
+
+@ARTICLE{needleman,
+    author = {Saul B. Needleman and Christian D. Wunsch},
+    title = {A general method applicable to the search for similarities 
+			in the amino acid sequence of two proteins},
+    journal = {Journal of Molecular Biology},
+    year = {1970},
+}
+
+@ARTICLE{ukkonen,
+    author = {Esko Ukkonen},
+    title = {Finding approximate patterns in strings},
+    journal = {Journal of Algorithms},
+    year = {1985},
 }
