--- a/trunk/latex/section/0_abstract.tex
+++ b/trunk/latex/section/0_abstract.tex
@@ -3,7 +3,7 @@ sequence information effectively by dividing individual DNA to massive number
 of short fragments and reading these massive sequences concurrently. At the
 result of these parallelized processing, high computational resources are
 needed to reconstruct the divided fragment sequence as the original order.
-mrFAST, one of the DNA sequence matching tools, promise highest
+mrFAST, one of the DNA sequence matching tools, promises highest
 comprehensiveness, however, it is slower than other tools. We propose a new
 algorithm, FastHASH, which drastically improves performance over mrFAST, while
 maintaining comprehensiveness.\\
